--- a/07_intermediate_bootstrap/05_challenge_1/css/styles.css
+++ b/07_intermediate_bootstrap/05_challenge_1/css/styles.css
@@ -120,3 +120,34 @@ h2 {
 .pricing-col {
   padding: 3% 2%;
 }
+
+/* CTA */
+
+#cta {
+  text-align: center;
+  background-color: #ff4c68;
+  position: relative;
+  padding: 100px 100px;
+  content: center;
+}
+
+.cta-h3 {
+  font-family: 'Montserrat';
+  font-size: 3rem;
+  font-weight: 900;
+  color: white;
+}
+
+#footer {
+  text-align: center;
+  background-color: #fff;
+  position: relative;
+  padding: 100px 100px;
+  content: center;
+}
+
+.footer-icon {
+  font-size: 1.5rem;
+  color: black;
+  padding: 50px 20px;
+}
