--- a/15_challenge_simon_says/style.css
+++ b/15_challenge_simon_says/style.css
@@ -1,13 +1,21 @@
 body {
   background-color: #FCFFE7;
+  text-align: center;
+  align-items: center;
+}
+
+h1, h2 {
+  display: block;
 }
 
 .btn {
-  width: 50%;
-  height: 100%;
+  height: 200px;
+  width: 200px;
+  margin: 25px;
+  border: 10px solid;
 }
 
-.btn-grn {
+.btn-green {
   background-color: green;
 }
 
@@ -15,10 +23,15 @@ body {
   background-color: red;
 }
 
-.btn-yel {
+.btn-yellow {
   background-color: yellow;
 }
 
-.btn-blu {
+.btn-blue {
   background-color: blue;
+}
+
+.pressed {
+  box-shadow: 0 3px 4px 0 #DBEDF3;
+  opacity: 0.4;
 }
